--- a/Dark Background Login Form/index.html
+++ b/Dark Background Login Form/index.html
@@ -1,1 +1,30 @@
+<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
+    pageEncoding="ISO-8859-1"%>
+ 
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en" dir="ltr">
+  
+  <head>
+  <meta charset="utf-8">
+  </head>
+   
+    
+  <body  style="background: url(bg.jpg); background-size:cover; background-attachment:fixed">
+ 
+<div class="login-box">
+  <h1>Login</h1>
+  <div class="textbox">
+     <i class="fas fa-user"></i>
+    <input type="text" placeholder="Username">
+  </div>
 
+  <div class="textbox">
+    <i class="fas fa-lock"></i>
+    <input type="password" placeholder="Password">
+  </div>
+  
+  <input type="button" class="btn" value="Sign in">
+  
+</div>
+  </body>
+</html>
